--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
+    "@chakra-ui/react": "^2.3.5",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -21,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^9.4.1",
+    "framer-motion": "^7.5.3",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
@@ -32,7 +34,7 @@
     "react-lazy-load-image-component": "^1.5.1",
     "react-loader-spinner": "^4.0.0",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.4.5",
     "react-typed": "^1.2.0",
